# IcicleMorphotreeWidget

./: CMakeLists.txt  IcicleMorphotreeWidgetResource.qrc  README.md  conanfile.py  conanfile.txt
appTest/: main.cpp  mainwindow.cpp  mainwindow.hpp
appTest/RenderingPanel/: BezierFuncRenderingWidget.cpp  BezierFuncRenderingWidget.hpp  FlatRenderingWidget.cpp  FlatRenderingWidget.hpp  GeoShaderRenderingWidget.cpp  GeoShaderRenderingWidget.hpp  HGradientRenderingWidget.cpp  HGradientRenderingWidget.hpp  NodeRenderingWidget.cpp  NodeRenderingWidget.hpp  RenderingPanel.cpp  RenderingPanel.hpp  TessFunctionRenderingWidget.cpp  TessFunctionRenderingWidget.hpp  TessShaderRenderingWidget.cpp  TessShaderRenderingWidget.hpp
appTest/RenderingPanel/CustomWidgets/: UnitSliderWidget.cpp  UnitSliderWidget.hpp
conan_dependencies_script/: create_dependecies_packages.bash  remove_dependencies_packages.bash  update_package.bash
include/IcicleMorphotreeWidget/: IcicleMorphotreeWidget.hpp  MorphoTreeType.hpp
include/IcicleMorphotreeWidget/Filtering/: AreaTreeFiltering.hpp  TreeFiltering.hpp
include/IcicleMorphotreeWidget/Graphics/: ColorBar.hpp  ColorMap.hpp  GNode.hpp  GrayScaleBar.hpp
include/IcicleMorphotreeWidget/Graphics/GrayScaleBar/: GrayScaleProfile.hpp
include/IcicleMorphotreeWidget/Graphics/Node/: BezierFuncNode.hpp  BezierFuncNodeFactory.hpp  GNode.hpp  GNodeEventHandler.hpp  GNodeFactory.hpp  OpenGLGNode.hpp  OpenGLGNodeFactory.hpp  TessBLGradientNode.hpp  TessBLGradientNodeFactory.hpp  TessFunctionNode.hpp  TessFunctionNodeFactory.hpp
include/IcicleMorphotreeWidget/Resource/: Loader.hpp
include/IcicleMorphotreeWidget/TreeLayout/: AutoSizeTreeLayout.hpp  TreeLayout.hpp
shaders/: fragment.glsl  geometry.glsl
shaders/bilinear_gradient/: fragment.glsl  tess_control.glsl  tess_evaluation.glsl  vertex.glsl
shaders/gl/: vertex.glsl
shaders/tess_function/: fragment.glsl  tess_control.glsl  tess_evaluation.glsl  vertex.glsl
shaders/tess_function_bezier/: fragment.glsl  tess_control.glsl  tess_evaluation.glsl  vertex.glsl
src/: CMakeLists.txt  IcicleMorphotreeWidget.cpp
src/Filtering/: AreaTreeFitering.cpp  TreeFiltering.cpp
src/Graphics/: ColorBar.cpp  ColorMap.cpp  GNode.cpp  GNodeEventHandler.cpp  GrayScaleBar.cpp
src/Graphics/GrayScaleBar/: GrayScaleProfile.cpp
src/Graphics/Node/: BezierFuncNode.cpp  BezierFuncNodeFactory.cpp  GNode.cpp  GNodeEventHandler.cpp  GNodeFactory.cpp  OpenGLGNode.cpp  OpenGLGNodeFactory.cpp  TessBLGradientNode.cpp  TessBLGradientNodeFactory.cpp  TessFunctionNode.cpp  TessFunctionNodeFactory.cpp
src/Resource/: Loader.cpp
src/TreeLayout/: AutoSizeTreeLayout.cpp  TreeLayout.cpp
